# stalcraft-discord-bot

./: .env.example  .gitignore  Dockerfile  pyproject.toml
src/: commands.py  config.py  emission_cog.py  main.py  repository.py
