[project]
name = "stalcraft-discord-bot"
version = "0.1.0"
description = "Discord bot for Stalcraft:X stats"
authors = [
    {name = "Tepasep", email = "tepasep@vk.com"},

]
dependencies = [
    "discord-py>=2.7.1",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.13.5",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
bot = "python -m src.main"